2021-01-03  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph/win32] Improve driver.

	* graph/win32/grwin32.c (gr_win32_surface_refresh_rectangle):
	Explicitly UpdateWindow to avoid delays and minor clean-up.
	(gr_win32_surface_listen_event): Minor clean-up.

2020-08-24  Anuj Verma  <anujv@iitbhilai.ac.in>

	[ftsdf] Add better usage section.

	* src/ftsdf.c (usage): New function.
	(main): Use it.

2020-08-22  Anuj Verma  <anujv@iitbhilai.ac.in>

	Add `ftsdf` to the build system.

	* Makefile (EXES): Add `ftsdf`.
	Add compile and link rules for `ftsdf`.

2020-08-22  Anuj Verma  <anujv@iitbhilai.ac.in>

	[graph] Add function to pass custom color for writing headers.

	* graph/grfont.h, graph/grfont.c (grGotobitmapColor): New function.

2020-08-22  Anuj Verma  <anujv@iitbhilai.ac.in>

	[ftsdf] Add main function.

	* src/ftsdf.c (main): New function.

2020-08-22  Anuj Verma  <anujv@iitbhilai.ac.in>

	[ftsdf] Draw SDF to display.

	* src/ftsdf.c (clamp, smoothstep, draw): New function.

2020-08-22  Anuj Verma  <anujv@iitbhilai.ac.in>

	[ftsdf] Handle window events.

	* src/ftsdf.c (Process_Event): New function.

2020-08-22  Anuj Verma  <anujv@iitbhilai.ac.in>

	[ftsdf] Add function to display some information.

	* src/ftsdf.c (write_header): New function.

2020-08-22  Anuj Verma  <anujv@iitbhilai.ac.in>

	[ftsdf] Handle some events.

	* src/ftsdf.c (event_font_update, event_color_change, event_help):
	New functions.

2020-08-22  Anuj Verma  <anujv@iitbhilai.ac.in>

	[ftsdf] New demo program to view SDF glyphs.

	* src/ftsdf.c: New file, with first templates.

2020-12-01  Priyesh Kumar  <priyeshkkumar@gmail.com>

	Synchronize with recent FreeType changes.

	* Makefile (FT_INCLUDES): Add `$(TOP_DIR)/src/dlg` to include 'dlg'
	header files.
	(LINK_LIBS): Add `-lpthread'.

2020-11-18  Werner Lemberg  <wl@gnu.org>

	[ftmulti]: Keys 'i' and 'I' now control the axis increment.

	* src/ftmulti.c (increment): New global variable.
	(Help): Updated.